--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"node": ">= 12.14.0"
 	},
 	"dependencies": {
+		"@guyplusplus/turndown-plugin-gfm": "1.0.7",
 		"camelcase": "^6.0.0",
 		"chalk": "^4.0.0",
 		"commander": "^5.0.0",
@@ -29,7 +30,6 @@
 		"request": "^2.88.2",
 		"request-promise-native": "^1.0.8",
 		"turndown": "^7.0.0",
-		"turndown-plugin-gfm": "^1.0.2",
 		"xml2js": "^0.4.23"
 	},
 	"devDependencies": {
